<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/splashFragment">

    <!-- Splash Fragment -->
    <fragment
        android:id="@+id/splashFragment"
        android:name="com.giftexpress.app.ui.splash.SplashFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_splash">

        <action
            android:id="@+id/action_splashFragment_to_loginFragment"
            app:destination="@id/loginFragment"
            app:popUpTo="@id/splashFragment"
            app:popUpToInclusive="true" />

        <action
            android:id="@+id/action_splashFragment_to_homeFragment"
            app:destination="@id/homeFragment"
            app:popUpTo="@id/splashFragment"
            app:popUpToInclusive="true" />
    </fragment>

    <!-- Login Fragment -->
    <fragment
        android:id="@+id/loginFragment"
        android:name="com.giftexpress.app.ui.auth.login.LoginFragment"
        android:label="@string/login"
        tools:layout="@layout/fragment_login">

        <action
            android:id="@+id/action_loginFragment_to_signupFragment"
            app:destination="@id/signupFragment" />

        <action
            android:id="@+id/action_loginFragment_to_homeFragment"
            app:destination="@id/homeFragment"
            app:popUpTo="@id/loginFragment"
            app:popUpToInclusive="true" />

        <action
            android:id="@+id/action_loginFragment_to_forgotPasswordFragment"
            app:destination="@id/forgotPasswordFragment" />
    </fragment>

    <!-- Forgot Password Fragment -->
    <fragment
        android:id="@+id/forgotPasswordFragment"
        android:name="com.giftexpress.app.ui.auth.forgot.ForgotPasswordFragment"
        android:label="Forgot Password"
        tools:layout="@layout/fragment_forgot_password" />

    <!-- Signup Fragment -->
    <fragment
        android:id="@+id/signupFragment"
        android:name="com.giftexpress.app.ui.auth.signup.SignupFragment"
        android:label="@string/signup"
        tools:layout="@layout/fragment_signup">

        <action
            android:id="@+id/action_signupFragment_to_homeFragment"
            app:destination="@id/homeFragment"
            app:popUpTo="@id/loginFragment"
            app:popUpToInclusive="true" />
    </fragment>

    <!-- Home Fragment -->
    <fragment
        android:id="@+id/homeFragment"
        android:name="com.giftexpress.app.ui.home.HomeFragment"
        android:label="@string/home"
        tools:layout="@layout/fragment_home">

        <action
            android:id="@+id/action_homeFragment_to_searchFragment"
            app:destination="@id/searchFragment" />
    </fragment>

    <!-- Categories Fragment -->
    <fragment
        android:id="@+id/categoriesFragment"
        android:name="com.giftexpress.app.ui.categories.CategoriesFragment"
        android:label="Categories"
        tools:layout="@layout/fragment_categories" />

    <!-- Brands Fragment -->
    <fragment
        android:id="@+id/offersFragment"
        android:name="com.giftexpress.app.ui.brands.BrandsFragment"
        android:label="Brands"
        tools:layout="@layout/fragment_home" />

    <!-- Orders Fragment -->
    <fragment
        android:id="@+id/ordersFragment"
        android:name="com.giftexpress.app.ui.orders.OrdersFragment"
        android:label="Orders"
        tools:layout="@layout/fragment_orders">
        <action
            android:id="@+id/action_ordersFragment_to_orderDetailsFragment"
            app:destination="@id/orderDetailsFragment" />
    </fragment>

    <!-- Order Details Fragment -->
    <fragment
        android:id="@+id/orderDetailsFragment"
        android:name="com.giftexpress.app.ui.orders.OrderDetailsFragment"
        android:label="Order Details"
        tools:layout="@layout/fragment_order_details">
        <argument
            android:name="orderId"
            app:argType="string" />
    </fragment>

    <!-- Account Fragment -->
    <fragment
        android:id="@+id/accountFragment"
        android:name="com.giftexpress.app.ui.account.AccountFragment"
        android:label="Account"
        tools:layout="@layout/fragment_account">

        <action
            android:id="@+id/action_accountFragment_to_loginFragment"
            app:destination="@id/loginFragment"
            app:popUpTo="@id/nav_graph"
            app:popUpToInclusive="true" />

        <action
            android:id="@+id/action_accountFragment_to_changePasswordFragment"
            app:destination="@id/changePasswordFragment" />

        <action
            android:id="@+id/action_accountFragment_to_aboutUsFragment"
            app:destination="@id/aboutUsFragment" />

        <action
            android:id="@+id/action_accountFragment_to_shippingInfoFragment"
            app:destination="@id/shippingInfoFragment" />

        <action
            android:id="@+id/action_accountFragment_to_privacyPolicyFragment"
            app:destination="@id/privacyPolicyFragment" />

        <action
            android:id="@+id/action_accountFragment_to_termsConditionsFragment"
            app:destination="@id/termsConditionsFragment" />

        <action
            android:id="@+id/action_accountFragment_to_wishlistFragment"
            app:destination="@id/wishlistFragment" />
    </fragment>

    <!-- About Us Fragment -->
    <fragment
        android:id="@+id/aboutUsFragment"
        android:name="com.giftexpress.app.ui.account.AboutUsFragment"
        android:label="About Us"
        tools:layout="@layout/fragment_account" />

    <!-- Shipping Info Fragment -->
    <fragment
        android:id="@+id/shippingInfoFragment"
        android:name="com.giftexpress.app.ui.account.ShippingInfoFragment"
        android:label="Shipping Information"
        tools:layout="@layout/fragment_account" />

    <!-- Privacy Policy Fragment -->
    <fragment
        android:id="@+id/privacyPolicyFragment"
        android:name="com.giftexpress.app.ui.account.PrivacyPolicyFragment"
        android:label="Privacy Policy"
        tools:layout="@layout/fragment_account" />

    <!-- Terms Conditions Fragment -->
    <fragment
        android:id="@+id/termsConditionsFragment"
        android:name="com.giftexpress.app.ui.account.TermsConditionsFragment"
        android:label="Terms and Conditions"
        tools:layout="@layout/fragment_account" />

    <!-- Change Password Fragment -->
    <fragment
        android:id="@+id/changePasswordFragment"
        android:name="com.giftexpress.app.ui.account.ChangePasswordFragment"
        android:label="Change Password"
        tools:layout="@layout/fragment_change_password" />

    <!-- Product Details Fragment -->
    <fragment
        android:id="@+id/productDetailsFragment"
        android:name="com.giftexpress.app.ui.product.ProductDetailsFragment"
        android:label="Product Details"
        tools:layout="@layout/fragment_order_details">
        <argument
            android:name="sku"
            app:argType="string" />
        <argument
            android:name="fallbackImageUrl"
            app:argType="string"
            app:nullable="true"
            android:defaultValue="@null" />
    </fragment>

    <!-- Category Fragment -->
    <fragment
        android:id="@+id/categoryFragment"
        android:name="com.giftexpress.app.ui.category.CategoryFragment"
        android:label="Category"
        tools:layout="@layout/fragment_home">
        <argument
            android:name="categoryId"
            app:argType="integer" />
        <argument
            android:name="categoryName"
            app:argType="string" />
    </fragment>

    <!-- Address Book Fragment -->
    <fragment
        android:id="@+id/addressBookFragment"
        android:name="com.giftexpress.app.ui.address.AddressBookFragment"
        android:label="Address Book"
        tools:layout="@layout/fragment_account" />

    <!-- Address Book Bottom Sheet -->
    <dialog
        android:id="@+id/addressBookBottomSheet"
        android:name="com.giftexpress.app.ui.address.AddressBookBottomSheet"
        android:label="Address Book">
        <argument
            android:name="isSelectionMode"
            app:argType="boolean"
            android:defaultValue="false" />
    </dialog>

    <!-- Address Form Fragment -->
    <fragment
        android:id="@+id/addressFormFragment"
        android:name="com.giftexpress.app.ui.address.AddressFormFragment"
        android:label="Address Form"
        tools:layout="@layout/fragment_account">
        <argument
            android:name="address"
            app:argType="com.giftexpress.app.data.model.Address"
            app:nullable="true"
            android:defaultValue="@null" />
    </fragment>

    <!-- Account Information Fragment -->
    <fragment
        android:id="@+id/accountInfoFragment"
        android:name="com.giftexpress.app.ui.account.AccountInfoFragment"
        android:label="Account Information"
        tools:layout="@layout/fragment_account" />

    <!-- Rewards Fragment -->
    <fragment
        android:id="@+id/rewardsFragment"
        android:name="com.giftexpress.app.ui.account.RewardsFragment"
        android:label="My Rewards"
        tools:layout="@layout/fragment_account" />

    <!-- Rewards History Fragment -->
    <fragment
        android:id="@+id/rewardsHistoryFragment"
        android:name="com.giftexpress.app.ui.account.RewardsHistoryFragment"
        android:label="My Rewards History"
        tools:layout="@layout/fragment_account" />

    <!-- Cart Fragment -->
    <fragment
        android:id="@+id/cartFragment"
        android:name="com.giftexpress.app.ui.cart.CartFragment"
        android:label="Shopping Cart"
        tools:layout="@layout/fragment_account">

        <action
            android:id="@+id/action_cartFragment_to_checkoutFragment"
            app:destination="@id/checkoutFragment" />
    </fragment>

    <!-- Wishlist Fragment -->
    <fragment
        android:id="@+id/wishlistFragment"
        android:name="com.giftexpress.app.ui.wishlist.WishlistFragment"
        android:label="My Wish List"
        tools:layout="@layout/fragment_account" />

    <!-- Search Fragment -->
    <fragment
        android:id="@+id/searchFragment"
        android:name="com.giftexpress.app.ui.search.SearchFragment"
        android:label="Search"
        tools:layout="@layout/fragment_home">

        <action
            android:id="@+id/action_searchFragment_to_searchListingFragment"
            app:destination="@id/searchListingFragment" />
    </fragment>

    <!-- Search Listing Fragment -->
    <fragment
        android:id="@+id/searchListingFragment"
        android:name="com.giftexpress.app.ui.search.SearchListingFragment"
        android:label="Search Results"
        tools:layout="@layout/fragment_home">
        <argument
            android:name="searchString"
            app:argType="string"
            android:defaultValue="" />

        <action
            android:id="@+id/action_searchListingFragment_to_productDetailsFragment"
            app:destination="@id/productDetailsFragment" />
    </fragment>

    <!-- Checkout Fragment -->
    <fragment
        android:id="@+id/checkoutFragment"
        android:name="com.giftexpress.app.ui.checkout.CheckoutFragment"
        android:label="Checkout"
        tools:layout="@layout/fragment_account">

        <action
            android:id="@+id/action_checkoutFragment_to_paymentFragment"
            app:destination="@id/paymentFragment" />
    </fragment>

    <!-- Payment Fragment -->
    <fragment
        android:id="@+id/paymentFragment"
        android:name="com.giftexpress.app.ui.payment.PaymentFragment"
        android:label="Payment"
        tools:layout="@layout/fragment_account">
        <argument
            android:name="total"
            app:argType="float"
            android:defaultValue="0" />

        <action
            android:id="@+id/action_paymentFragment_to_orderSuccessFragment"
            app:destination="@id/orderSuccessFragment" />
    </fragment>

    <!-- Order Success Fragment -->
    <fragment
        android:id="@+id/orderSuccessFragment"
        android:name="com.giftexpress.app.ui.payment.OrderSuccessFragment"
        android:label="Order Placed"
        tools:layout="@layout/fragment_account">
        <argument
            android:name="orderId"
            app:argType="string"
            android:defaultValue="" />
    </fragment>

    <!-- Contact Us Fragment -->
    <fragment
        android:id="@+id/contactUsFragment"
        android:name="com.giftexpress.app.ui.account.ContactUsFragment"
        android:label="Contact Us"
        tools:layout="@layout/fragment_account" />

    <!-- Perfume Enquiry Fragment -->
    <fragment
        android:id="@+id/perfumeEnquiryFragment"
        android:name="com.giftexpress.app.ui.account.PerfumeEnquiryFragment"
        android:label="Perfume Enquiry"
        tools:layout="@layout/fragment_account" />

    <!-- Unified product listing (Best Sellers, New Arrivals, Featured, and brand catalogs) -->
    <fragment
        android:id="@+id/specialProductsFragment"
        android:name="com.giftexpress.app.ui.products.SpecialProductsFragment"
        android:label="Special Products"
        tools:layout="@layout/fragment_home">
        <argument
            android:name="specialFlag"
            app:argType="integer" />
        <argument
            android:name="title"
            app:argType="string" />
        <argument
            android:name="bannerUrl"
            app:argType="string"
            app:nullable="true"
            android:defaultValue="@null" />
        <argument
            android:name="categoryId"
            app:argType="integer"
            android:defaultValue="0" />
        <argument
            android:name="brandId"
            app:argType="integer"
            android:defaultValue="0" />
        <action
            android:id="@+id/action_specialProductsFragment_to_productDetailsFragment"
            app:destination="@id/productDetailsFragment" />
    </fragment>

</navigation>
